--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
         <com.airbnb.lottie.LottieAnimationView
             android:layout_width="wrap_content"
@@ -30,15 +31,15 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Meeting Shiva"
+                android:text="@string/meetingshiva"
                 android:textColor="@color/black"
                 android:textSize="34sp"
                 android:textStyle="bold"/>
 
             <HorizontalScrollView
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -51,10 +52,9 @@
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -71,7 +71,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Haridwar"
+                                android:text="@string/haridwar"
                                 android:textColor="@color/black"
                                 android:textSize="34sp"
                                 android:textStyle="bold" />
@@ -83,10 +83,9 @@
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -103,7 +102,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Katarmal"
+                                android:text="@string/katarmal"
                                 android:textColor="@color/black"
                                 android:textSize="34sp"
                                 android:textStyle="bold" />
@@ -115,10 +114,9 @@
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -135,7 +133,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Baijnath"
+                                android:text="@string/baijnath"
                                 android:textColor="@color/black"
                                 android:textSize="34sp"
                                 android:textStyle="bold" />
@@ -147,10 +145,9 @@
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -167,7 +164,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Patal Bhuvaneshwar"
+                                android:text="@string/pbt"
                                 android:textColor="@color/black"
                                 android:textSize="30sp"
                                 android:textStyle="bold" />
@@ -179,10 +176,9 @@
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -199,7 +195,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Binsar Mahadev"
+                                android:text="@string/binsar"
                                 android:textColor="@color/black"
                                 android:textSize="30sp"
                                 android:textStyle="bold" />
@@ -211,10 +207,9 @@
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -231,7 +226,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Jageshwar"
+                                android:text="@string/jageshwar"
                                 android:textColor="@color/black"
                                 android:textSize="30sp"
                                 android:textStyle="bold" />
@@ -243,10 +238,9 @@
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -263,7 +257,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Dandeshwar"
+                                android:text="@string/dandeshwar"
                                 android:textColor="@color/black"
                                 android:textSize="30sp"
                                 android:textStyle="bold" />
@@ -271,14 +265,13 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/balshwarcard"
+                        android:id="@+id/baleshwarcard"
                         android:layout_width="300dp"
                         android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp"
+                        android:layout_marginEnd="20dp"
                         app:cardCornerRadius="50dp"
-                        app:cardElevation="50dp">
+                        app:cardElevation="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -295,7 +288,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="75dp"
                                 android:gravity="center_horizontal|center_vertical"
-                                android:text="Baleshwar"
+                                android:text="@string/baleshwar"
                                 android:textColor="@color/black"
                                 android:textSize="30sp"
                                 android:textStyle="bold" />
@@ -303,6 +296,122 @@
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
             </HorizontalScrollView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/forts"
+                android:layout_marginTop="40dp"
+                android:textColor="@color/black"
+                android:textSize="34sp"
+                android:textStyle="bold"/>
+
+            <HorizontalScrollView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/mallacard"
+                        android:layout_width="300dp"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginEnd="20dp"
+                        app:cardCornerRadius="50dp"
+                        app:cardElevation="10dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="225dp"
+                                android:scaleType="fitXY"
+                                app:srcCompat="@drawable/malla" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="75dp"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="@string/malla"
+                                android:textColor="@color/black"
+                                android:textSize="30sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/banasurcard"
+                        android:layout_width="300dp"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginEnd="20dp"
+                        app:cardCornerRadius="50dp"
+                        app:cardElevation="10dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="225dp"
+                                android:scaleType="fitXY"
+                                app:srcCompat="@drawable/banasur" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="75dp"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="@string/banasur"
+                                android:textColor="@color/black"
+                                android:textSize="30sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/rajbhungacard"
+                        android:layout_width="300dp"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginEnd="20dp"
+                        app:cardCornerRadius="50dp"
+                        app:cardElevation="10dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="225dp"
+                                android:scaleType="fitXY"
+                                app:srcCompat="@drawable/rajbhunga" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="75dp"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="@string/banasur"
+                                android:textColor="@color/black"
+                                android:textSize="30sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+            </HorizontalScrollView>
+
+
 
         </LinearLayout>
     </ScrollView>
