--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -31,6 +31,14 @@
                 app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
 
             <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="249dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                app:srcCompat="@android:drawable/bottom_bar" />
+
+            <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
