--- a/app/src/main/res/layout/activity_data_page.xml
+++ b/app/src/main/res/layout/activity_data_page.xml
@@ -9,43 +9,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nav_datapage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
-
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="249dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:visibility="invisible"
-                app:srcCompat="@android:drawable/bottom_bar" />
-
-            <ImageView
-                android:id="@+id/imageView11"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:scaleType="fitEnd"
-                app:srcCompat="@drawable/ic_baseline_menu_24" />
-        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -191,6 +163,7 @@
                             android:textStyle="bold|italic" />
                     </LinearLayout>
                 </HorizontalScrollView>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -282,6 +255,39 @@
 
             </LinearLayout>
         </ScrollView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/nav_datapage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_food_unsel" />
+
+        <ImageView
+            android:id="@+id/datapage_home"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_home_unsel" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_hotel_unsel" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
